@@ -1,6 +1,6 @@
 #
 #
-# $Id: indimail-mta.spec.in,v 1.375 2023-03-11 16:08:38+05:30 Cprogrammer Exp mbhangui $
+# $Id: indimail-mta.spec.in,v 1.376 2023-04-06 22:43:32+05:30 Cprogrammer Exp mbhangui $
 %undefine _missing_build_ids_terminate_build
 %global _unpackaged_files_terminate_build 1
 
@@ -540,6 +540,7 @@ echo ../resolv.conf 1>&3
 %attr(644,root,qmail) %config(noreplace,missingok) %{qsysconfdir}/control/level2-tlds
 %attr(644,root,qmail) %config(noreplace,missingok) %{qsysconfdir}/control/level3-tlds
 %attr(644,root,qmail) %config(noreplace,missingok) %{qsysconfdir}/foxhole_all.cdb
+%attr(644,root,qmail) %config(noreplace,missingok) %{qsysconfdir}/favicon.base64
 
 %if %{defined suse_version} || %{defined sles_version}
 %attr(644,root,root)  %config(noreplace,missingok) %{_sysconfdir}/permissions.d/%{name}-permissions
