@@ -160,6 +160,11 @@ multi-signature generation
 91. svctool: updated mrtg graphs
 - 05/04/2023
 92. svctool: added --config=snmpdconf for creating /etc/indimail/snmpd.conf
+- 06/04/2023
+93. svctool: added command to create /etc/indimail/snmpd.conf
+94. indimail-mta.spec: added /etc/indimail/favicon.base64 image for mrtg
+    graphs
+95. svctool: --mrtg command - added favicon.png to mailmrtg/index.html
 
 * Mon Jan 30 2023 13:14:56 +0000 Manvendra Bhangui <indimail-mta@indimail.org> 3.0.2-1.1%{?dist}
 Release 3.0.2-1.1 Start 08/09/2022 End 30/11/2023
